style.css
body {
    display: flex; 
    flex-direction: column;
    margin: 0;
    flex: 1;
}

header {
    display: flex;
    background-color: #F4B998;
    color: #F9FAF8;
    height: 350px;
    flex-wrap: wrap;
    
}

nav,
nav h1,
nav ul,
header img,
.header-container,
.header-content {
    display: flex;
}

a {
    transition-duration: 0.4s;
    text-decoration: none;
    color: #E5E7EB;
}

nav {
    flex: 1 1 100%;
    height: 50px;
    align-items: center;
    justify-content: space-between;
    margin: 0px 100px;
}

nav a {
    font-size: 18px;
}

nav ul{
    list-style-type: none;
    gap: 22px;
}

.header-container {
    flex: 1 1 auto;
    justify-content: space-between;
    align-items: center;
    padding: 32px;
    row-gap: 0px;
    margin: 0px 70px;
}

.header-content {
    flex-direction: column;
    width: 350px;
    
}

.header-container h1 {
    font-size: 48px;
    font-weight: 900;
    margin: 0;
}

.header-container p {
    margin-top: 0;
}

.sign-up {
    width: 100px;
    color: white;
    background-color: #EC745C;
    border-radius: 6px;
    padding: 5px;
    border: none;
    transition-duration: 0.4s;
}

.sign-up:hover {
    background-color: white;
}

a:hover {
    color: #EC745C;
}

header img {
    height: 250px;
}

.illustration-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 350px;
    background-color: #EC745C;
    color: white;
}

.card-container {
    display: flex;
    width: 600px;
    gap: 0 25px;
    margin: 40px;
}

.info-card {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    
}

.info-card img{
    width: 100px;
    height: 100px;
    margin-bottom: -10px;
    border: solid #F4B998;
    border-radius: 15%;
}

.quote-container {
    display: flex;
    flex-direction: column;
    background-color: #E5E7EB;
    align-items: center;
    justify-content: center;
    height: 300px;
    font-size: 36px;
    position: relative;
    padding: 0 120px;
}

.quote {
    padding: 50px;
    max-width: 80%;
    margin: auto;
    font-style: italic;
}
.quote-credits {
    font-size: 24px;
    text-align: right;
    width: 80%;
    margin-top: -30px;
    font-weight: bold;
}

.recruit-section {
    display: flex;
    height: 250px;
    justify-content: center;
    align-items: center;
}

.action-area {
    display: flex;
    width: 900px;
    background-color: #EC745C;
    border-radius: 10px;
    justify-content: center;
    align-items: center;
    gap: 180px;
}

.action-area button {
    border: solid #E5E7EB;
}

footer {
    display: flex;
    background-color: #F4B998;
    padding: 30px;
    justify-content: center;
}

